--- a/index.html
+++ b/index.html
@@ -2,19 +2,53 @@
 <html>
 
   <head><!-- where all the meta data will go, like and files we need to include -->
-    <title>My Little Rainbow</title><!-- the title is what appears on your tab -->
+    <title>My Little Rainbow</title>
+    <link rel="stylesheet" type="text/css" href="./main.css" />
   </head>
 
   <body><!-- the body element is where everything we will see on the page will go -->
 
-    <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div>
-                <div></div> <!-- the grandest child div -->
+    <style>
+      div {
+  border: 20px solid #000; /* this is short hand for setting
+                            the border's width, its type, and color */
+  display: inline-block; /* a way of positioning elements */
+  min-width: 20em; /* the two min styles make the shape */
+  min-height: 25em; /* of the divs oblong*/
+  border-radius: 50%; /* this makes the normally square div round */
+  border-left-color: transparent; /* these remove the color from the left side */
+  border-right-color: transparent; /* the right side */
+  border-bottom-color: transparent; /* and the bottom of the circle */
+}
+#red {
+  border-top-color: #f00;
+}
+#orange {
+  border-color: #ffa500;
+}
+#yellow {
+  border-color: #ff0;
+}
+#green {
+  border-color: #00bc3f;
+}
+#blue {
+  border-color: #06f;
+}
+#indigo {
+  border-color: #8a2be2;
+}
+#violet {
+  border-bottom-color: #d300c9;
+}
+    </style><!-- our soon to be beautiful rainbow! -->
+    <div id="red"><!-- the grandest grandparent div -->
+      <div id="orange">
+        <div id="yellow">
+          <div id="green">
+            <div id="blue">
+              <div id="indigo">
+                <div id="violet"></div> <!-- the grandest child div -->
               </div>
             </div>
           </div>
